--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -18,4 +18,4 @@ jobs:
           run: |
             cd .github/workflows/
             chmod +x ascii-script.sh
-            .github/workflows/ascii-script.sh
+            sh ascii-script.sh
