--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -7,6 +7,7 @@ jobs:
         - name: Checkout
           uses: actions/checkout@main
     install_job:
+        needs: ASCII_JOB
         runs-on: ubuntu-22.04 
         steps:   
         - name: install cowsay program
@@ -14,7 +15,7 @@ jobs:
     
         - name: sleep for 30 sec
           run: sleep 30
-          
+
         - name: Generate ASCII network
           run: cowsay -f dragon "run for cover, i am a dragon....RAWR" >> dragon.txt
 
