--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -29,13 +29,16 @@ jobs:
         needs: install_job
         runs-on: ubuntu-22.04
         steps:
-        - name: listing repo files
-          run: ls -ltra
+        - name: artifact location
+          run: ls -lrt   $GITHUB_WORKSPACE
+
         - name: download dragon file
           uses: actions/download-artifact@v4
           with:
            name: my-dragon file
-           path: dragon.txt
+           path: $GITHUB_WORKSPACE/dragon.txt
+
+
 
         - name: test file exists
           run: grep -i "dragon" dragon.txt
